--- a/app/src/main/res/layout/add_part.xml
+++ b/app/src/main/res/layout/add_part.xml
@@ -10,30 +10,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageButton
-                android:id="@+id/imageButton"
-                style="@android:style/Widget.ImageButton"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:elevation="0dp"
-                app:srcCompat="@android:drawable/ic_menu_camera" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
@@ -86,7 +62,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textVie"
@@ -98,7 +74,7 @@
 
         <EditText
             android:id="@+id/txtTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
@@ -111,23 +87,49 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textViep"
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Price"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/txtPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="numberDecimal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViep"
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
             android:layout_weight="1"
             android:text="Description"
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/editText"
-            style="@style/Widget.AppCompat.EditText"
+            android:id="@+id/txtDescription"
             android:layout_width="match_parent"
-            android:layout_height="212dp"
+            android:layout_height="216dp"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:singleLine="false"
-            android:textAlignment="viewStart" />
+            android:inputType="textMultiLine" />
+
+        <Button
+            android:id="@+id/btnAddPart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Add Part" />
+
     </LinearLayout>
 
 </LinearLayout>
