--- a/app/src/main/res/layout/activity_my_parts.xml
+++ b/app/src/main/res/layout/activity_my_parts.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvMyParts"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#dc090d"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-
-
-    </android.support.design.widget.AppBarLayout>
-
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="match_parent" />
+</LinearLayout>
